[package]
name = "calby-client-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tonic = "0.7"

[build-dependencies]
tonic-build = "0.7"